# sift-sentinel

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml  requirements.txt  setup.cfg  vercel.json
.github/workflows/: ci.yml
cases/demo-case/: case.json  ground_truth.json
cases/demo-case/evidence/: README.md
cases/demo-case/evidence/disk/: amcache.csv  evtx_security.csv  prefetch.csv  registry_run_keys.csv  timeline.csv
cases/demo-case/evidence/memory/: malfind.csv  netstat.csv  processes.csv
cases/demo-case/evidence/network/: pcap_summary.csv
cases/demo-case/outputs/demo-benchmark/analysis/: accuracy_score.json  evidence_integrity.json  evidence_manifest_after.json  evidence_manifest_before.json  execution_log.jsonl  progress.json
cases/demo-case/outputs/demo-benchmark/reports/: accuracy_report.md  findings.json  triage_report.md
cases/demo-case/outputs/demo-run/analysis/: evidence_integrity.json  (+4 more)
docs/: ACCURACY_REPORT.md  ARCHITECTURE.md  DATASET.md  DEMO_SCRIPT.md  DEVPOST_STORY.md  RESEARCH.md  SUBMISSION_CHECKLIST.md  TRY_IT_OUT.md  VIDEO_SUBMISSION_SCRIPT.md
docs/images/: architecture.mmd
integrations/claude-code/: PROTOCOL_SIFT_CASE_PROMPT.md  mcp.example.json
scripts/: create_devpost_media.py  demo.sh
src/sift_sentinel/: __init__.py  agent.py  case.py  cli.py  evidence.py  logger.py  mcp_server.py  models.py  policies.py  reporting.py  runners.py  scoring.py  sift_wrappers.py  tools.py  utils.py  validation.py
tests/: test_agent.py  test_mcp_server.py  test_policy.py  test_scoring.py  test_validation.py
(+2 files in other folders)
