[metadata]
name = sift-sentinel
version = 0.1.0
description = Evidence-safe autonomous DFIR agent and MCP server for Protocol SIFT.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Vandit
author_email = grindandeat786@gmail.com

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sift-sentinel = sift_sentinel.cli:main

